Fixed cropping. recropping now crops the original image and not the cropped image before.

--- a/src/css/loggedIn/addpost/addPostPage.css
+++ b/src/css/loggedIn/addpost/addPostPage.css
@@ -194,9 +194,8 @@
     position: absolute;
 }
 .cropimage-page img {
-    object-fit: cover;
-    min-width: 350px;
-    min-height: 350px;
+    /* min-width: 350px;
+    min-height: 350px; */
 
 
 }
